tests/baselines/reference/parserExportAssignment8.errors.txt
tests/cases/conformance/parser/ecmascript5/ExportAssignments/parserExportAssignment8.ts(1,1): error TS1148: Cannot compile external modules unless the '--module' flag is provided.
tests/cases/conformance/parser/ecmascript5/ExportAssignments/parserExportAssignment8.ts(1,1): error TS2304: Cannot find name 'B'.
tests/cases/conformance/parser/ecmascript5/ExportAssignments/parserExportAssignment8.ts(1,1): error TS2309: An export assignment cannot be used in a module with other exported elements.


==== tests/cases/conformance/parser/ecmascript5/ExportAssignments/parserExportAssignment8.ts (3 errors) ====
    export = B;
    ~~~~~~~~~~~
!!! error TS1148: Cannot compile external modules unless the '--module' flag is provided.
    ~~~~~~~~~~~
!!! error TS2304: Cannot find name 'B'.
    ~~~~~~~~~~~
!!! error TS2309: An export assignment cannot be used in a module with other exported elements.
    
    export class C {
    }